<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/dashboard"
            android:icon="@drawable/bottom_nav_dashboard_icon"/>
        <item
            android:id="@+id/nav_add_outfit"
            android:title="@string/outfit"
            android:icon="@drawable/add_outfit_icon" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/field_username_icon"/>
        <item
            android:id="@+id/nav_rate_us"
            android:title="@string/rate_us"
            android:icon="@drawable/menu_rate_us_icon"/>
    </group>

</menu>